<resources>
    <string name="app_name">ShoppingList</string>
    <string name="content_description">image</string>
    <string name="title_login">LOGIN</string>
    <string name="et_hint_email_id">Email ID</string>
    <string name="et_hint_password">Password</string>
    <string name="lbl_forgot_password">Forgot Password?</string>
    <string name="btn_lbl_login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register"><u>Register</u></string>
    <string name="btn_lbl_add">Dodaj</string>
    <string name="add_new_list">Dodaj nową listę</string>
    <string name="add_product">Dodaj produkt do listy</string>
    <string name="btn_lbl_products"><u>Produkty</u></string>
    <string name="TVod">Data:</string>
    <string name="btn_lbl_od">Od:</string>
    <string name="btn_lbl_do">Do:</string>
    <string name="planowany_koszt">Suma:</string>
    <string name="faktyczny_koszt">Wydane:</string>
    <string name="et_hint_nazwa">Nazwa:</string>
    <string name="edycja_listy">Edytuj Listę</string>
    <string name="btn_lbl_save">Zapisz zmiany</string>
    <string name="save_changes">Zapisz zmiany</string>
    <string name="tv_produkty">Produkty:</string>
    <string name="dodaj_liste">Dodaj Listę</string>
    <string name="btn_dodaj_liste">Dodaj Listę</string>
    <string name="lista_produktow">Lista produktów</string>
    <string name="tv_spinner">Jednostka:</string>
    <string name="tv_nazwa">Nazwa: </string>
    <string name="tv_cena">Cena:</string>
    <string name="tv_cena_jednostka">Cena/Jednostka:</string>
    <string name="title_sklad">Skład:</string>
    <string name="tv_ilosc">Ilość:</string>
    <string name="Lista">Dodaj produkt do listy</string>
    <string name="tv_produkt">Produkt:</string>
    <string name="product_info">Informacje o produkcie</string>
    <string name="tv_koszt">Koszt:</string>
    <string name="description">Opis produktu:</string>
</resources>